# backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_samples_test.py
.github/ISSUE_TEMPLATE/: 기능-개발-템플릿.md
app/: main.py
app/agents/: __init__.py  chat_agent.py  threat_analyzer_agent.py  utils.py
app/controllers/: chat_controller.py  incident_controller.py  playbook_controller.py  push_token_controller.py  response_plan_controller.py  user_controller.py  webhook_controller.py
app/core/: config.py  container.py  database.py  exception_handlers.py  llm.py  llm_provider.py
app/dtos/: __init__.py  incident_dto.py
app/models/: __init__.py  constants.py  incident_model.py  incident_raw_log_model.py  incident_report_model.py  push_token_model.py  rag_playbook_model.py  response_plan_action_model.py  response_plan_model.py  user_model.py  victim_system_model.py
app/rag/: __init__.py  embeddings.py  indexer.py  loader.py  splitter.py
app/schemas/: __init__.py  agent_schema.py  incident_schema.py  notification_schema.py  playbook_schema.py  push_token_schema.py  rag_schema.py  response_plan_schema.py  user_schema.py  webhook_schema.py
app/scripts/: __init__.py  index_playbooks.py
app/services/: __init__.py  ai_invoker_service.py  chat_service.py  crypt_service.py  incident_raw_log_service.py  incident_report_service.py  incident_service.py  jwt_service.py  notification_service.py  (+7 more)
migrations/: README  README.md  env.py
playbooks/: execution.md  initial_access.md  reconnaissance.md
(+55 files in other folders)
